--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        android:name=".core.application.WalletApplication"
+        android:name="com.akbarovdev.mywallet.core.application.WalletApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -11,13 +11,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyWallt"
+        android:theme="@style/Theme.MyWallet"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.akbarovdev.mywallet.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.MyWallt">
+
+            android:theme="@style/Theme.MyWallet">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
